# OSynaptic-RX

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OSynaptic-RX.h  README.md  README.zh.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  keywords.txt  library.properties
.github/workflows/: build.yml  ci.yml  release.yml
cmake/: osrxConfig.cmake.in
docs/: 01-deployment-guide.md  02-api-reference.md  03-wire-format.md  04-mcu-config-reference.md  05-flash-optimization.md
examples/: basic_rx.c
examples/BareMetalUARTRX/: BareMetalUARTRX.ino
examples/BasicRX/: BasicRX.ino
examples/ESP32UdpRX/: ESP32UdpRX.ino
examples/LoRaRX/: LoRaRX.ino
examples/MultiSensorRX/: MultiSensorRX.ino
include/: osrx_b62.h  osrx_config.h  osrx_crc.h  osrx_packet.h  osrx_parser.h  osrx_sensor.h  osrx_types.h  osrx_units.h
src/: OSynaptic-RX.h  osrx_b62.c  osrx_b62.h  osrx_config.h  osrx_crc.c  osrx_crc.h  osrx_packet.c  osrx_packet.h  osrx_parser.c  osrx_parser.h  osrx_sensor.c  osrx_sensor.h  osrx_types.h  osrx_units.h
tests/: test_host_abi.c  test_parse.c
tools/: sizeprobe.c
